deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: project  # Specify the project namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: abdullahaslam007/frontend:latest  # Replace with the actual Docker image
          ports:
            - containerPort: 80  # Nginx serves on port 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: project  # Specify the project namespac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: abdullahaslam007/backend:latest  # Replace with the actual Docker image
          ports:
            - containerPort: 8000  # FastAPI runs on port 8000
---
